--- a/client/src/components/atoms/Skeleton.css
+++ b/client/src/components/atoms/Skeleton.css
@@ -8,6 +8,14 @@
     animation: skeleton-loading 1.5s infinite linear;
 }
 
+[data-theme='dark'] .skeleton {
+    background-color: rgba(255, 255, 255, 0.05);
+    background-image: linear-gradient(90deg,
+            rgba(255, 255, 255, 0.05) 0px,
+            rgba(255, 255, 255, 0.1) 40px,
+            rgba(255, 255, 255, 0.05) 80px);
+}
+
 @keyframes skeleton-loading {
     0% {
         background-position: -200px 0;
